<resources>
    <string name="app_name">微聊</string>
    <string name="radioNews">消息</string>
    <string name="radioLacation">附近</string>
    <string name="radioContacts">联系人</string>
    <string name="radioMe">个人中心</string>

    <!--登陆和注册界面-->
    <string name="land">登陆</string>
    <string name="regist">注册</string>
    <string name="next_step">下一步</string>
    <string name="forget_password">忘记密码</string>
    <string name="new_user_regist">新用户注册</string>
    <string name="read_terms">我已阅读并同意服务条款</string>
    <string name="other_way_land">使用其他方式登录</string>

    <!--MeFragment-->
    <string name="zxing_name_cadr">二维码名片</string>
    <string name="zxing_scan">扫一扫</string>
    <string name="me_collect">收藏</string>
    <string name="me_privacy">隐私</string>
    <string name="me_setting">设置</string>
    <string name="me_account">账号</string>
    <string name="me_user_name">用户名</string>
    <string name="me_account_me">个人账号</string>
    <string name="me_account_head">头像</string>
    <string name="me_account_nick_name">昵称</string>
    <string name="me_account_number">账号</string>
    <string name="me_account_photo">拍照</string>
    <string name="me_account_native">从相册中选取</string>
    <string name="me_account_canal">取消</string>
    <string name="me_updata_password">密码修改</string>
    <string name="me_new_news_notify">新消息通知</string>
    <string name="me_clear_cache">清除缓存</string>
    <string name="me_quit_land">退出登录</string>
    <string name="me_old_password">原密码</string>
    <string name="me_new_password">新密码</string>
    <string name="me_confirm_password">确认密码</string>
    <string name="me_hint_password">6-16个字符，区分大小写</string>
    <string name="me_confirm">确认</string>
    <string name="me_add_fried">加入为好友是需要验证</string>
    <string name="me_black_list">黑名单</string>

    <!--bar popupwindow-->
    <string name="private_chat">发起聊天</string>
    <string name="group_chat">创建群组</string>
    <string name="add_contacts">添加好友</string>

    <string name="add_black_list">加入黑名单</string>
    <string name="remove_friend">删除好友</string>

    <string name="set_name">设置备注</string>

    <string name="voice_char">语音通话</string>
    <string name="video_char">视频聊天</string>
    <string name="text_char">发起会话</string>

    <string name="connect_not_invalid">网络连接不可用</string>
    <string name="layout_dialog_loading">正在加载</string>

    <string name="is_delete_chat_record">确定删除聊天记录吗</string>
    <string name="delete_chat_record">清除聊天记录</string>
    <string name="chat_infomation">聊天信息</string>
    <string name="find_chat_record">查找聊天记录</string>
    <string name="message_no_disturbing">消息免打扰</string>
    <string name="message_top">会话置顶</string>


</resources>
