<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroup"
    android:orientation="vertical">

    <include layout="@layout/me_head" />

    <TextView
        style="@style/textViewNoClick"
        android:text="@string/me_old_password" />

    <EditText style="@style/passwordET"
        android:inputType="textPassword"/>

    <TextView
        style="@style/textViewNoClick"
        android:text="@string/me_new_password" />

    <EditText
        android:inputType="textPassword"
        style="@style/passwordET"
        android:hint="@string/me_hint_password" />

    <TextView
        style="@style/textViewNoClick"
        android:text="@string/me_confirm_password" />

    <EditText

        android:inputType="textPassword"
        style="@style/passwordET"
        android:hint="@string/me_hint_password" />

    <Button
        android:id="@+id/bt_land_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/land_regist_selector"
        android:text="@string/me_confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/common_size" />

</LinearLayout>
