<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroup"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/me_head" />

    <LinearLayout
        android:id="@+id/group_info"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ac_iv_user_portrait"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="@dimen/mar_top"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_remark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLength="16"
                android:maxLines="1"
                android:text="@string/me_account_nick_name"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:maxLength="16"
                android:maxLines="1"
                android:text="@string/me_account_nick_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLength="16"
                android:maxLines="1"
                android:text="@string/me_account_number" />


        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/textViewStyle"
        android:layout_marginTop="@dimen/mar_top"
        android:hint="@string/set_name" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mar_top"
        android:layout_marginRight="@dimen/mar_top"
        android:layout_marginTop="30dp"
        android:background="@drawable/white_selector"
        android:text="@string/voice_char"
        android:textColor="@color/black"
        android:textSize="@dimen/common_size" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mar_top"
        android:layout_marginRight="@dimen/mar_top"
        android:layout_marginTop="@dimen/mar_top"
        android:background="@drawable/white_selector"
        android:text="@string/video_char"
        android:textColor="@color/black"
        android:textSize="@dimen/common_size" />

    <Button
        android:id="@+id/bt_quit_land"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mar_top"
        android:layout_marginRight="@dimen/mar_top"
        android:layout_marginTop="@dimen/mar_top"
        android:background="@drawable/land_regist_selector"
        android:text="@string/text_char"
        android:textColor="@color/white"
        android:textSize="@dimen/common_size" />


</LinearLayout>