<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_me_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroup"
    android:orientation="vertical">

   <include layout="@layout/me_head"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mar_top"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_me_account_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true">

            <TextView
                android:textSize="@dimen/common_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/me_account_head" />

            <ImageView
                android:id="@+id/iv_me_account_photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_launcher" />

        </RelativeLayout>

        <LinearLayout style="@style/devidesLines" />

        <RelativeLayout
            android:id="@+id/rl_me_account_nick_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true">

            <TextView
                android:textSize="@dimen/common_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/me_account_nick_name" />

            <TextView
                android:textSize="@dimen/common_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="达康书记" />

        </RelativeLayout>

        <LinearLayout style="@style/devidesLines" />

        <RelativeLayout
            android:id="@+id/rl_me_account_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true">

            <TextView
                android:textSize="@dimen/common_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/me_account_number" />

            <TextView
                android:textSize="@dimen/common_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="13338384289" />
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
