<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="7dp"
        android:background="@drawable/popwindow_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/re_chatroom"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="18dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_chatroom"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/pop_chat"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/iv_chatroom"
                android:text="@string/private_chat"
                android:textColor="@color/pop_text_color" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/re_addfriends"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="18dp"
            android:gravity="center_vertical"
            android:background="@color/white">

            <ImageView
                android:id="@+id/iv_addfriends"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/pop_group"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/iv_addfriends"
                android:text="@string/group_chat"
                android:textColor="@color/pop_text_color" />



        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/re_scanner"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="18dp"
            android:gravity="center_vertical"
            android:background="@color/white">

            <ImageView
                android:id="@+id/iv_scanner"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/pop_add"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/iv_scanner"
                android:text="@string/add_contacts"
                android:textColor="@color/pop_text_color" />

        </RelativeLayout>




    </LinearLayout>

</LinearLayout>