<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroup">

    <ImageView
        android:id="@+id/iv_land_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/land_intef" />

    <RelativeLayout
        android:id="@+id/rl_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_land_icon"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp">

        <EditText
            android:inputType="phone"
            android:textCursorDrawable="@null"
            android:id="@+id/et_land_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/land_regist_round"
            android:hint="请输入账号"
            android:paddingBottom="5dp"
            android:paddingLeft="@dimen/land_regist_account"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:textColorHint="#AAAAAA" />

        <ImageView
            android:id="@+id/iv_land_more_name_down"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:src="@drawable/land_more_down" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_account"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <EditText
            android:textCursorDrawable="@null"
            android:id="@+id/et_land_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/land_regist_round"
            android:hint="请输入密码"
            android:inputType="textPassword"
            android:paddingBottom="5dp"
            android:paddingLeft="@dimen/land_regist_account"
            android:paddingTop="5dp"
            android:textColorHint="#AAAAAA" />

    </RelativeLayout>

    <Button
        android:id="@+id/bt_land_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/land_regist_selector"
        android:text="@string/land"
        android:textColor="@color/white"
        android:textSize="@dimen/common_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt_land_regist"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/common_blue"
            android:textSize="@dimen/small_common_size" />

        <TextView
            android:id="@+id/tv_new_user_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/new_user_regist"
            android:textColor="@color/common_blue"
            android:textSize="@dimen/small_common_size" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_fast_regist"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:text="@string/other_way_land"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#999"
            android:textSize="@dimen/common_size" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tv"
            android:background="#999" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv"
            android:background="#999" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_fast_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_regist_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/fast_regist_qq" />

        <ImageView
            android:id="@+id/iv_regist_wet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/iv_regist_qq"
            android:src="@drawable/fast_regist_wet"

            />

        <ImageView
            android:id="@+id/iv_regist_sina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/iv_regist_wet"
            android:src="@drawable/fast_regist_sina" />

    </RelativeLayout>

</RelativeLayout>